# FidelityFX-VariableShading

./: .gitlab-ci.yml  .gitmodules  README.md
ffx-variableshading/: ffx_variable_shading.h
sample/: CMakeLists.txt  README.md
sample/src/Common/: VariableShadingSample.json
sample/src/DX12/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  VariableShadingCode.cpp  VariableShadingCode.h  VariableShadingSample.cpp  VariableShadingSample.h  stdafx.cpp  stdafx.h
sample/src/DX12/shaders/: GLTFPbrPass-IO.hlsl  VRSImageGenCS.hlsl  VrsOverlay.hlsl
